--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,14 @@ body {
     color: #82a5ca;
     text-align: center;
     font-family: 'Orbitron', sans-serif;
+    height: 100vh;
 }
 
 #hero {
     background-image: url("images/galaxy.webp");
     background-size: cover;
     padding: 10px 0 40px 0;
+    min-height: 82vh;
 }
 
 #main-logo {
@@ -17,6 +19,7 @@ body {
 
 #title {
     text-shadow: 0px 0px 4px black;
+    margin-top: 200px;
 }
 
 .btn {
